owl-parser/src/parser/snapshots/owl_parser__parser__expr__tests__simple-escape-string.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(r#\"\"\\n\\t\\\\\"\"#)"

---
Expr {
    kind: StringLit(
        "\n\t\\",
    ),
    span: 0..8,
}
